--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -1,26 +1,37 @@
 body {
- font-family: sans-serif;
+
  font-size:  18px;
  line-height: 1.5;
- border-top: 5px solid #a4a6a8;
- border-bottom: 5px solid #a4a6a8;
+ border-top: 1px solid #0E5159;
+ border-bottom: 1px solid #0E5159;
  margin: 30px auto;
  width: 800px;
- padding: 50px;
- background-color: #F6F6F6;
+ padding: 20px;
+ background-color: #020E17;
+ font-family: sans-serif;
 
+}
+
+hr {
+
+  border: .5px solid #8c8b8b;
 }
 
 nav {
   text-align: center;
-  color: #a4a6a8;
+  color: #0E5159;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 nav ul{
   list-style-type: none;
   padding: 0px;
 
+
+
 }
+
+
 
 .current_page {
   font-style: italic;
@@ -30,15 +41,40 @@ nav li{
   display: inline-block;
 
 
+
 }
 
-h1{
+h1 {
   text-align: center;
   text-transform: uppercase;
   margin-top: 0px;
-  color: #333333;
-  font-family: Arimo;
+  color: #15AB89;
+  font-family: 'Merriweather', serif;
+
 }
+
+h3{
+  font-family: 'Merriweather', serif;
+  color: #15AB89;
+}
+
+h4 {
+  font-family: 'Merriweather', serif;
+  text-transform: uppercase;
+  color: #15AB89;
+}
+
+p {
+  color: #ffffff;
+  font-weight: lighter;
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
+li {
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #fff;
+}
+
 .Avatar {
   height: 200px;
   float: right;
@@ -51,7 +87,18 @@ h1{
 
 a {
   font-weight: bold;
-  color: #a4a6a8;
+  color: #0E5159;
   text-decoration: none;
   font-weight: lighter;
+  -webkit-transition: color 500ms ease-out .01s;
+  -moz-transition: color 500ms ease-out .01s;
+  -o-transition: color 500ms ease-out .01s;
+  transition: color 500ms ease-out .01s;
+}
+
+a:hover {
+
+
+
+  color: #15AB89;
 }
